...

    var body: some View {
        Stack {
            List {
                NavigationLink("Settings", value: Route.settings)
                NavigationLink("Details", value: Route.item("accessibility"))
                NavigationLink("Player") {
                    VStack {
                        Button("Change fixture playback state") { player.playing.toggle() }
                        MiniPlayer()
                        FullPlayer()
                    }
                }
            }
        }
...
